# telecalls

./: .gitignore  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: calls_protocol.md  tgcalls_native_backend.md
native/: CMakeLists.txt
native/include/telecalls/: codec_opus.h  crypto_mtproto2.h  engine.h  engine_internal.h  media_pipeline.h  proto.h  reflector_transport.h  tgcalls_engine.h  transport_udp.h
native/src/: codec_opus.c  crypto_mtproto2.c  engine.c  engine_debug.c  media_pipeline.c  proto.c  reflector_transport.c  tgcalls_engine.cpp  transport_udp.c
native/tools/: fetch_tgcalls_deps.sh
src/telecraft/client/: __init__.py  client.py  mtproto.py
src/telecraft/client/apis/: __init__.py  calls.py
src/telecraft/client/calls/: __init__.py  crypto.py  crypto_mtproto2.py  errors.py  manager.py  native_bridge.py  native_build.py  proto.py  session.py  signaling.py  state.py  stats.py  tgcalls_native_build.py  types.py  visual_key.py
src/telecraft/client/calls/audio/: __init__.py  backend.py  portaudio_backend.py
tests/integration/calls/: test_legacy_udp_path_counters.py  test_official_interop_harness.py  test_signaling_roundtrip.py  test_tgcalls_backend_offline.py
tests/live/: test_calls_e2e.py  test_private_call_official_client.py
tests/unit/calls/: test_calls_manager.py  test_crypto.py  test_crypto_mtproto2.py  test_crypto_mtproto2_vectors.py  test_native_bridge.py  test_proto_vectors.py  test_protocol_state_machine.py  test_state_machine.py  test_tgcalls_engine_smoke.py  test_types.py  test_visual_key_emoji.py
tests/unit/client/: test_client_surface.py
tools/: bootstrap_native.sh  build_native.py  smoke_audio_devices.py  smoke_auth_key.py  smoke_call_handshake.py  smoke_call_voice.py  smoke_get_config.py  smoke_get_me.py  smoke_incoming_auto_accept.py  smoke_login.py  smoke_ping.py  smoke_send_self.py  smoke_updates.py
